Changed for live deployment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-DATABASE_URL="postgresql://USER:PASSWORD@localhost:5432/ecommerce_admin?schema=public"
+DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="YOUR_CLOUD_NAME"
 NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="YOUR_UNSIGNED_UPLOAD_PRESET"
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=admin@strongpass
 ADMIN_NAME=Admin User
+JWT_SECRET="your_jwt_secret_here"
